<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_twenty"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.video.corpus.controllers.LoginActivity">


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/img_logo"
        app:layout_constraintBottom_toTopOf="@+id/ConsLay_cred"
        android:contentDescription="@string/sample" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ConsLay_cred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/Txtinput_em"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">
            <android.support.design.widget.TextInputEditText

                android:layout_width="match_parent"
                android:id="@+id/Edt_email"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text=""
                android:layout_marginTop="@dimen/dp_twenty"
                android:hint="@string/email"/>
                </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/Txtinput_em"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/Edt_pwd"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text=""
            android:layout_marginTop="@dimen/dp_twenty"
            android:hint="@string/pwd" />

        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>


    <Button
        android:onClick="btnlognclick"
        android:id="@+id/btn_login"
        android:layout_marginTop="@dimen/dp_twenty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logins"
        android:background="@color/colorAccent"
        android:textColor="@color/toolbar_text"
        android:textSize="@dimen/sp_fifteen"
        app:layout_constraintTop_toBottomOf="@+id/ConsLay_cred"
        />

    <TextView
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"
        android:textSize="@dimen/sp_fifteen"
        android:layout_marginTop="@dimen/dp_twenty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_fpwd"
        android:text="@string/fpwd"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>
