<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:visibility="visible"/>



    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:id="@+id/recycler"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/recycler"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        android:id="@+id/linlay_packages"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginLeft="@dimen/dp_ten"
            android:layout_marginStart="@dimen/dp_ten"
            android:id="@+id/customview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@android:color/transparent"
                android:id="@+id/linlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:layout_height="wrap_content"
                    android:id="@+id/mypackages"
                    android:text="@string/mypackages"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_thirty"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_arrow"
                    android:src="@mipmap/down"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mypackages"
                    android:contentDescription="@string/sample" />
            </LinearLayout>

        </RelativeLayout>
        <View
            android:layout_marginTop="@dimen/dp_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_one"
            android:background="@color/colorAccent"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_packages"
            />
    </LinearLayout>


    <TextView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_exception"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_twenty"
        android:text="@string/nodata"
        android:gravity="center_horizontal|center"/>



</android.support.constraint.ConstraintLayout>