<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_marginTop="@dimen/dp_twenty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/img_share"
        android:maxLines="1"
        android:text=""
        android:id="@+id/txt_name"
        android:textSize="@dimen/sp_twenty"
        android:ellipsize="end"
        android:textColor="@color/colorAccent"
        />

    <ImageView
        android:foregroundGravity="center"
        android:id="@+id/img_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sample"
        android:src="@android:drawable/ic_menu_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_name" />



    <ScrollView
        android:layout_marginTop="@dimen/dp_ten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/txt_name">
        <android.support.constraint.ConstraintLayout
            android:layout_marginTop="@dimen/dp_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/conslay_main">

        <LinearLayout
            android:layout_marginTop="@dimen/dp_twenty"
            android:divider="@drawable/divider"
            android:showDividers="middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Lin_content"
        android:orientation="vertical" />

            <RelativeLayout
                android:layout_marginTop="@dimen/dp_ten"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/Rel_exception"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Lin_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone">

                <TextView
                    android:id="@+id/Txt_movie_exception"
                    android:text="@string/norelatedchannels"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_twenty"/>

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>
        </ScrollView>


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Txt_exception"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp_twenty"
            android:text="@string/nodata"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>