<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:id="@+id/Linlay"
        android:weightSum="1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:id="@+id/player_lay">


        <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/Cons_player_view_layout"
            android:id="@+id/exoplayercons">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/simpleexoplayerview" />

            <ProgressBar
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/progressbar_player"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Txt_player_exception_player"
                android:text="@string/player_exception"
                android:textSize="@dimen/sp_twenty"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>


            <ImageView
                android:scaleType="fitXY"
                android:src="@mipmap/placeholder_crousel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/img_event"
                android:contentDescription="@string/sample" />

        </android.support.constraint.ConstraintLayout>



        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Cons_player_view_layout"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent">
            <include layout="@layout/share_layout"/>

        </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

            <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_ten"
            android:paddingRight="@dimen/dp_ten"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:id="@+id/frame_layout">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_player_exception"
        android:text="@string/nodata"
        android:textSize="@dimen/sp_twenty"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>

